tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part2.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Flow.Array` to import.

  examples/aoc/2025/aoc_day8_part2.flx:6:1
  |
6 | import Flow.Array as Array
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Flow.Array.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Flow.Array` under roots: //?/examples/aoc/2025, //?/src (imported from //?/examples/aoc/2025/aoc_day8_part2.flx).
== stdout ==
<not executed>
